--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-<h1>#ImDoneEating</h1>
+<html>
+<head>
+<style>
+body {
+  margin: 0;
+  background: black;
+}
+h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 300%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+  text-shadow: 0 0 5px rgba(0,0,0,.5);
+  margin: 0;
+  font-family: Helvetica;
+  color: white;
+  opacity: .6;
+  transition: .6s ease all;
+}
+h1:hover {
+  text-shadow: 0 0 15px rgba(0,0,0,1);
+  opacity: 1;
+}
+</style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+</head>
+<body>
+  <h1>#ImDoneEating</h1>
+  <!-- Place <div> tag where you want the feed to appear -->
+  <div id="curator-feed"></div>
+
+  <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
+  <script type="text/javascript">
+  var curatorConfig = {
+      container:"#curator-feed"
+  };
+  (function(){
+      var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
+      i.src = "https://api.curator.io/published/38b16da2-a115-4bd4-a43c-99f39256.js";
+      e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+  })();
+  </script>
+</body>
+</html>
