--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ h1:hover {
   opacity: 1;
 }
 </style>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+
 </head>
 <body>
   <h1>#ImDoneEating</h1>
@@ -38,7 +38,7 @@ h1:hover {
   };
   (function(){
       var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
-      i.src = "https://api.curator.io/published/38b16da2-a115-4bd4-a43c-99f39256.js";
+      i.src = "https://cdn.curator.io/published/38b16da2-a115-4bd4-a43c-99f39256.js";
       e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
   })();
   </script>
